bugfix: z-index was causing cars to not register click

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ body {
 
 .vehicle {
     position: absolute;
-    z-index: -100;
     border-left: 5px solid white !important;
     border-right: 5px solid red !important;
 }
@@ -32,4 +31,9 @@ body {
     width: 125px;
     height: 75px;
     border: 5px solid green;
+}
+
+button {
+    z-index: 100;
+    position: relative;
 }
